# cmake

./: CMakeLists.txt  README.md  main.cpp
SubProject/: CMakeLists.txt  main.cpp
library1/: first.cpp  first.h
